crates/ink/tests/ui/event/fail/signature_hex_short.stderr
error: `signature_topic` is expected to be 32-byte hex string. Found 14 bytes
 --> tests/ui/event/fail/signature_hex_short.rs:2:25
  |
2 | #[ink(signature_topic = "1111111111111111111111111111")]
  |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
